--- a/www/views/configuracion/configuracion.html
+++ b/www/views/configuracion/configuracion.html
@@ -25,7 +25,7 @@
 		  <h3 style="-webkit-margin-before: 1em; -webkit-margin-after: 1em; -webkit-margin-start: 0px; -webkit-margin-end: 0px;" id="trans_label_40">Ingresa a tu sistema y <span style="color:#0893d2;">Empecemos!</span></h3>
 		  <form method="post" class="contact-form form-validate4" id="myloginform" novalidate="novalidate">
 			<div class="form-group">
-			  <input class="form-control input-lg trans_user" type="text" id="user2" name="usuario" placeholder="Usuario" required="" value="" tabindex='1' autocomplete="off" aria-required="true">
+			  <input class="form-control input-lg trans_user" type="email" id="user2" name="usuario" placeholder="Usuario" required="" value="" tabindex='1' autocomplete="off" aria-required="true">
 			</div>
 			<div class="form-group">
 			  <input type="password" id="pass2" name="mipass" value="" class="form-control input-lg trans_pass" placeholder="Password" required="" tabindex='2' autocomplete="off" aria-required="true">
