--- a/platforms/android/assets/www/views/nubepos/nubepos.html
+++ b/platforms/android/assets/www/views/nubepos/nubepos.html
@@ -177,7 +177,7 @@
                         <div class='col-xs-8'>
                           <input id="queprecioaux" name="queprecioaux" type="hidden" value="0">
                           <button type="button" onclick="agregarCompraProf();" class="btn btn-primary btn-block btn-lg" style="margin-bottom:5px; margin-right:5px; text-transform:uppercase;height: 80px;font-size: 30px;font-weight: bold;" onclick="AgregarProdPref(); return false;">
-                              <span class="trans_agregar">Agregar a Factura>></span>
+                              <span class="trans_agregar">Agregar >></span>
                           </button>
                         </div>
                         <div class='col-xs-2'>
